# vira

./: .env.test_credentials  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  requirements_dev.txt  script_utils.py  setup.cfg  setup.py  tox.ini  vira_add_parent.py  vira_copy.py  vira_deep_copy.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: tests.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml
src/: script_utils.py  vira_add_parent.py  vira_copy.py  vira_deep_copy.py  vira_script_utils.py
src/vira/: __init__.py  vira_add_parent.py  vira_base.py  vira_copy.py  vira_deep_copy.py  vira_error.py  vira_issue.py  vira_vira.py
tests/: conftest.py  credentials.py  cridentials.py  fixtures.py  test_1_env.py  test_2_prod_connection.py  test_3_qa_connection.py  test_connection.py  test_issue.py  test_logging.py  test_scripts.py
vira/: __init__.py  vira_base.py  vira_error.py  vira_issue.py  vira_vira.py
