[metadata]
name = vira
version = 0.1.0
description = Volvo JIRA (VIRA) package and helper scripts. Contains scripts for deep copy, change parent and more
author = Per-Ola Robertsson
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    vira
install_requires =
    jira>=3
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
vira = py.typed

[flake8]
max-line-length = 160