[metadata]
name = volvo-jira
version = 0.1.1
description = Volvo JIRA (VIRA) package and helper scripts. Contains scripts for deep copy, change parent and more
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Per-Ola Robertsson
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    vira
install_requires =
    jira>=3
python_requires = >=3.8
package_dir =
    =src
zip_safe = no
entry_points=
    [console_scripts]
    vira_deep_copy=vira.vira_deep_copy:main
    vira_copy=vira.vira_copy:main
    vira_add_parent=vira.vira_add_parent:main

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
vira = py.typed

[flake8]
max-line-length = 160